--- a/kotlinplayer/build.gradle
+++ b/kotlinplayer/build.gradle
@@ -48,4 +48,10 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.76'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // RXJava + Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 }
